--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -3,7 +3,7 @@
   <div class="ui blue labels">
     {{#each selectors}}
       <a class="ui label" data-id="{{id}}">
-        {{id}}<i class="icon close"></i>
+        {{listname}}<i class="icon close"></i>
       </a>
     {{/each}}
   </div>
