--- a/client/templates/lists.html
+++ b/client/templates/lists.html
@@ -6,7 +6,7 @@
         <i class="large list layout middle aligned icon"></i>
         <div class="content">
           <a class="header" data-id="{{_id}}">{{name}}</a>
-          <div class="description">{{_id}}</div>
+          <!-- <div class="description">{{_id}}</div> -->
         </div>
       </div>
     </div>
