--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -1,12 +1,14 @@
 <body>
-  {{> loginButtons}}
   <div class="ui container">
     <div class="ui grid">
       <div class="four wide column">
         {{> lists}}
       </div>
-      <div class="eleven wide column">
+      <div class="eight wide column">
         {{> generator}}
+      </div>
+      <div class="four wide column">
+        {{> loginButtons}}
       </div>
     </div>
   </div>
