--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -2,13 +2,15 @@
   <div class="ui container">
     <div class="ui grid">
       <div class="four wide column">
+        {{> user}}
+        <div class="ui divider"></div>
         {{> lists}}
       </div>
       <div class="eight wide column">
         {{> generator}}
       </div>
       <div class="four wide column">
-        {{> loginButtons}}
+
       </div>
     </div>
   </div>
