--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -3,13 +3,19 @@
     <div class="ui grid">
       <div class="four wide column">
         {{> user}}
-        <div class="ui divider"></div>
-        {{> lists}}
       </div>
       <div class="eight wide column">
+        <h2 class="ui icon header">
+          <i class="random icon"></i>
+          <div class="content">
+            Randy
+            <div class="sub header">The easy list randomizer!</div>
+          </div>
+        </h2>
         {{> generator}}
       </div>
       <div class="four wide column">
+        {{> lists}}
 
       </div>
     </div>
