--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -1,5 +1,5 @@
 <template name="generator">
-
+    <h2>Generator</h2>
     <div class="ui blue labels">
       {{#each selectors}}
         <a class="ui label remove-selector" data-id="{{index}}">
