--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -1,6 +1,6 @@
 <body>
   <div class="ui container">
-    <div class="ui grid">
+    <div class="ui stackable doubling grid">
       <div class="row"></div>
       <div class="row">
         <div class="four wide column"></div>
