--- a/client/templates/lists.html
+++ b/client/templates/lists.html
@@ -2,7 +2,28 @@
   <h2>Lists</h2>
   {{#if currentUser}}
 
-    {{#each lists}}
+  <div class="ui search">
+    <div class="ui icon input">
+      {{> esInput index="lists" placeholder="Search..." class="prompt" renderSuggestion="searchResult"}}
+      <i class="search icon"></i>
+    </div>
+  </div>
+
+    {{#ifEsInputIsEmpty index="lists"}}
+        {{#each latestLists}}
+          <div class="ui relaxed divided list">
+            <div class="item">
+              <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
+              <div class="content">
+                <a class="header listitem" data-id="{{_id}}">{{name}}</a>
+                <div class="description">{{listAuthor}}</div>
+              </div>
+            </div>
+          </div>
+        {{/each}}
+    {{/ifEsInputIsEmpty}}
+
+    {{#esEach index="lists"}}
       <div class="ui relaxed divided list">
         <div class="item">
           <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
@@ -12,7 +33,8 @@
           </div>
         </div>
       </div>
-    {{/each}}
+    {{/esEach}}
+
     <button class="fluid ui green right labeled icon button" id="showadd">
       <i class="plus icon"></i>
       Add
@@ -78,4 +100,17 @@
     </div>
   </div>
 
+</template>
+
+
+<template name="searchResult">
+    <div class="ui relaxed divided list">
+      <div class="item">
+        <i class="large {{#if doc.public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{doc._id}}"></i>
+        <div class="content">
+          <a class="header listitem" data-id="{{doc._id}}">{{doc.name}}</a>
+          <div class="description">{{listAuthor}}</div>
+        </div>
+      </div>
+    </div>
 </template>
