--- a/client/templates/lists.html
+++ b/client/templates/lists.html
@@ -2,16 +2,19 @@
   <h2>Lists</h2>
   {{#if currentUser}}
 
-  <div class="ui search">
-    <div class="ui icon input">
+  <div class="ui fluid search">
+    <div class="ui fluid icon input">
       {{> esInput index="lists" placeholder="Search..." class="prompt" renderSuggestion="searchResult"}}
       <i class="search icon"></i>
     </div>
   </div>
 
+  <div class="ui relaxed divided list">
+    {{#ifEsIsSearching index="lists"}}
+      <div class="ui active centered large inline loader"></div>
+    {{else}}
     {{#ifEsInputIsEmpty index="lists"}}
         {{#each latestLists}}
-          <div class="ui relaxed divided list">
             <div class="item">
               <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
               <div class="content">
@@ -19,12 +22,11 @@
                 <div class="description">{{listAuthor}}</div>
               </div>
             </div>
-          </div>
         {{/each}}
     {{/ifEsInputIsEmpty}}
 
     {{#esEach index="lists"}}
-      <div class="ui relaxed divided list">
+
         <div class="item">
           <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
           <div class="content">
@@ -32,13 +34,16 @@
             <div class="description">{{listAuthor}}</div>
           </div>
         </div>
-      </div>
     {{/esEach}}
+    {{/ifEsIsSearching}}
+
+    </div>
 
     <button class="fluid ui green right labeled icon button" id="showadd">
       <i class="plus icon"></i>
       Add
     </button>
+
 
   {{else}}
     <div class="ui info message">
