--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -16,7 +16,7 @@
     <a class="ui teal ribbon label">Results</a>
     <div class="ui list" id="results">
       {{#each results}}
-      <ul>{{data}}</ul>
+        <ul><h3>{{data}}</h3></ul>
       {{/each}}
     </div>
 
