Added dev info.

--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -26,6 +26,8 @@
         </div>
         <div class="four wide column">
           {{> user}}
+          <div class="ui divider"></div>
+          {{> info}}
         </div>
     </div>
     </div>
