--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -18,13 +18,13 @@
         <div class="four wide column"></div>
       </div>
       <div class="row">
-        <div class="four wide column">
+        <div class="three wide column">
           {{> lists}}
         </div>
-        <div class="eight wide column">
+        <div class="ten wide column">
           {{> generator}}
         </div>
-        <div class="four wide column">
+        <div class="three wide column">
           {{> user}}
           <div class="ui divider"></div>
           {{> info}}
