--- a/client/templates/lists.html
+++ b/client/templates/lists.html
@@ -16,7 +16,7 @@
       {{#ifEsInputIsEmpty index="lists"}}
           {{#each latestLists}}
               <div class="item">
-                <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
+                <i class="large link icon {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
                 <div class="content">
                   <a class="header listitem" data-id="{{_id}}">{{name}}</a>
                   <div class="description">{{listAuthor}}</div>
@@ -74,7 +74,7 @@
           <div class="field">
             <div class="ui toggle checkbox">
               <input type="checkbox" id="listpublic">
-              <label for="listpublic">Make list public</label>
+              <label for="listpublic">Public List</label>
             </div>
           </div>
         </div>
