Fixed remove select bug.

--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -6,7 +6,7 @@
     <div class="ui container" style="padding:5px;">
     <div class="ui blue labels">
       {{#each selectors}}
-        <a class="ui label remove-selector" data-id="{{index}}">
+        <a class="ui label remove-selector">
           {{listname}}<i class="icon close"></i>
         </a>
       {{/each}}
