Fixed main div gridding.

--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -2,8 +2,7 @@
   <div class="ui stackable doubling grid">
     <div class="row"></div>
     <div class="row">
-      <div class="four wide column"></div>
-      <div class="eight wide column">
+      <div class="sixteen wide column">
         <div class="ui center aligned container">
           <h2 class="ui icon header">
             <i class="random icon"></i>
@@ -14,7 +13,6 @@
           </h2>
         </div>
       </div>
-      <div class="four wide column"></div>
     </div>
     <div class="row">
       <div class="one wide column"></div>
