Fixed bug that removes the wrong query.

--- a/client/templates/generator.html
+++ b/client/templates/generator.html
@@ -7,7 +7,7 @@
     <div class="ui blue labels">
       {{#each selectors}}
         <a class="ui label remove-selector">
-          {{listname}}<i class="icon close"></i>
+          {{listname}}
         </a>
       {{/each}}
     </div>
