--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,4 +1,4 @@
-<body>
+<template name="home">
   <div class="ui stackable doubling grid">
     <div class="row"></div>
     <div class="row">
@@ -28,6 +28,6 @@
         {{> info}}
       </div>
       <div class="one wide column"></div>
+    </div>
   </div>
-  </div>
-</body>
+</template>
