Fixed bug and refactored to listeditor.

--- a/app/client/templates/info.html
+++ b/app/client/templates/info.html
@@ -2,7 +2,7 @@
   <p>
     <h5>Developed by
     <a href="https://twitter.com/Erik_Gartner">@Erik_Gartner</a></h5>
-    Version {{Meteor.settings.public.randy_version}}<br>
+    Version {{randyVersion}}<br>
     <a href="https://bitbucket.org/smoiz/randy/issues?status=new&status=open">Report Issue</a>
   </p>
 </template>
