--- a/app/client/templates/info.html
+++ b/app/client/templates/info.html
@@ -3,6 +3,6 @@
     <h5>Developed by
     <a href="https://twitter.com/Erik_Gartner">@Erik_Gartner</a></h5>
     Version {{randyVersion}}<br>
-    <a href="https://bitbucket.org/smoiz/randy/issues?status=new&status=open">Report Issue</a>
+    <a href="https://bitbucket.org/smoiz/randy/issues/new">Report Issue</a>
   </p>
 </template>
