--- a/app/client/templates/lists.html
+++ b/app/client/templates/lists.html
@@ -26,14 +26,13 @@
       {{/ifEsInputIsEmpty}}
 
       {{#esEach index="lists"}}
-
-          <div class="item">
-            <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
-            <div class="content">
-              <a class="header listitem" data-id="{{_id}}">{{name}}</a>
-              <div class="description">{{listAuthor}}</div>
-            </div>
+        <div class="item">
+          <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
+          <div class="content">
+            <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a> <i class="icon empty heart favoriteHeart"></i></span>
+            <div class="description">{{listAuthor}}</div>
           </div>
+        </div>
       {{/esEach}}
     {{/ifEsIsSearching}}
     </div>
