--- a/app/client/templates/lists.html
+++ b/app/client/templates/lists.html
@@ -18,7 +18,7 @@
               <div class="item">
                 <i class="large link icon {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
                 <div class="content">
-                  <a class="header listitem" data-id="{{_id}}">{{name}}</a>
+                  <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a><i class="icon {{#if isFavorite}}red{{else}}empty{{/if}} heart favoriteIcon" data-id="{{_id}}"></i></span>
                   <div class="description">{{listAuthor}}</div>
                 </div>
               </div>
@@ -29,7 +29,7 @@
         <div class="item">
           <i class="large {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
           <div class="content">
-            <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a> <i class="icon empty heart favoriteHeart"></i></span>
+            <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a><i class="icon {{#if isFavorite}}red{{else}}empty{{/if}} heart favoriteIcon" data-id="{{_id}}"></i></span>
             <div class="description">{{listAuthor}}</div>
           </div>
         </div>
