--- a/app/client/templates/lists.html
+++ b/app/client/templates/lists.html
@@ -16,7 +16,7 @@
       {{#ifEsInputIsEmpty index="lists"}}
           {{#each latestLists}}
               <div class="item">
-                <i class="large link icon {{#if public}}unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
+                <i class="large link icon {{#if public}}unlock alternate{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
                 <div class="content">
                   <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a><i class="icon {{#if isFavorite}}red{{else}}empty{{/if}} heart favoriteIcon" data-id="{{_id}}"></i></span>
                   <div class="description">{{listAuthor}}</div>
