--- a/app/client/templates/listeditor.html
+++ b/app/client/templates/listeditor.html
@@ -47,4 +47,34 @@
       {{/if}}
     </div>
   </div>
+
+
+<!-- Modal for fork/edit -->
+<div class="ui small basic modal" id="forkModal">
+  <i class="close icon"></i>
+  <div class="header">
+    Favorite or Fork?
+  </div>
+  <div class="image content">
+    <div class="image">
+      <i class="bookmark icon"></i>
+    </div>
+    <div class="description">
+      <p>This list is made by another author. Fork it for a private copy or favorite it for easy access?</p>
+    </div>
+  </div>
+  <div class="actions">
+    <div class="two ui buttons">
+      <div class="ui red basic inverted button">
+        <i class="heart icon"></i>
+        Favorite
+      </div>
+      <div class="or"></div>
+      <div class="ui green basic inverted button" id="forkButton">
+        <i class="fork icon"></i>
+        Fork
+      </div>
+    </div>
+  </div>
+</div>
 </template>
