Added new favorite modal view.

--- a/app/client/templates/listeditor.html
+++ b/app/client/templates/listeditor.html
@@ -48,7 +48,6 @@
     </div>
   </div>
 
-
 <!-- Modal for fork/edit -->
 <div class="ui small basic modal" id="forkModal">
   <i class="close icon"></i>
@@ -60,12 +59,12 @@
       <i class="bookmark icon"></i>
     </div>
     <div class="description">
-      <p>This list is made by another author. Fork it for a private copy or favorite it for easy access?</p>
+      <p>This list is made by another author.<br>Fork it for a private copy or favorite it for easy access?</p>
     </div>
   </div>
   <div class="actions">
     <div class="two ui buttons">
-      <div class="ui red basic inverted button">
+      <div class="ui red basic inverted button" id="favoriteButton">
         <i class="heart icon"></i>
         Favorite
       </div>
