--- a/app/client/templates/listeditor.html
+++ b/app/client/templates/listeditor.html
@@ -3,23 +3,24 @@
   <div class="ui small modal" id="addModal">
     <i class="close icon"></i>
     <div class="header">
+      <i class="ui right floated {{#if isFavorite}}red{{else}}empty{{/if}} heart icon" id="favoriteButton"></i>
       {{#if activeList}}Edit{{else}}Add{{/if}} list
     </div>
     <div class="content">
       <div class="ui form">
         <div class="two inline fields">
-          <div class="field {{#if isMyList}}{{else}}disabled{{/if}}">
+          <div class="field">
             <label>Name</label>
             <input id="listname">
           </div>
-          <div class="field {{#if isMyList}}{{else}}disabled{{/if}}">
+          <div class="field">
             <div class="ui toggle checkbox">
               <input type="checkbox" id="listpublic">
               <label for="listpublic">Public List</label>
             </div>
           </div>
         </div>
-        <div class="field {{#if isMyList}}{{else}}disabled{{/if}}">
+        <div class="field">
           <label>List</label>
           <textarea id="listitems"></textarea>
         </div>
@@ -27,21 +28,15 @@
     </div>
     <div class="actions">
       {{#if activeList}}
-        {{#if isMyList}}
-          <div class="ui red deny button" id="deleteListButton">
-            Delete
-          </div>
-        {{/if}}
+        <div class="ui red deny button" id="deleteListButton">
+          Delete
+        </div>
       {{/if}}
       <div class="ui black deny button" id="cancelListButton">
         Cancel
       </div>
       {{#if activeList}}
-        {{#if isMyList}}
-          <button class="ui positive right labeled icon button" id="addlist">Save<i class="checkmark icon"></i></button>
-        {{else}}
-          <button class="ui positive right labeled icon button" id="forkButton">Fork<i class="fork icon"></i></button>
-        {{/if}}
+        <button class="ui positive right labeled icon button" id="addlist">Save<i class="checkmark icon"></i></button>
       {{else}}
         <button class="ui positive right labeled icon button" id="addlist">Add<i class="checkmark icon"></i></button>
       {{/if}}
@@ -59,7 +54,7 @@
       <i class="bookmark icon"></i>
     </div>
     <div class="description">
-      <p>This list is made by another author.<br>Fork it for a private copy or favorite it for easy access?</p>
+      <p>This list is made by another author.<br>Favorite it for easy access or Fork it for a private copy!</p>
     </div>
   </div>
   <div class="actions">
