chore: Updated README and issue link

--- a/client/templates/info.html
+++ b/client/templates/info.html
@@ -3,6 +3,6 @@
     <h5>Developed by
     <a href="https://twitter.com/Erik_Gartner">@Erik_Gartner</a></h5>
     Version {{randyVersion}}<br>
-    <a href="https://bitbucket.org/smoiz/randy/issues/new">Report Issue</a>
+    <a href="https://github.com/ErikGartner/randy/issues/new">Report Issue</a>
   </p>
 </template>
