--- a/client/templates/lists.html
+++ b/client/templates/lists.html
@@ -14,15 +14,29 @@
       <div class="ui active centered large inline loader"></div>
     {{else}}
       {{#ifEsInputIsEmpty index="lists"}}
-          {{#each latestLists}}
-              <div class="item">
-                <i class="large link icon green {{#if public}}alternate unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
-                <div class="content">
-                  <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a></span>
-                  <div class="description">{{listAuthor}}</div>
+          {{#if latestLists}}
+            {{#each latestLists}}
+                <div class="item">
+                  <i class="large link icon green {{#if public}}alternate unlock{{else}}lock{{/if}} icon middle aligned showEditList" data-id="{{_id}}"></i>
+                  <div class="content">
+                    <span class="header"><a class="listitem" data-id="{{_id}}">{{name}}</a></span>
+                    <div class="description">{{listAuthor}}</div>
+                  </div>
                 </div>
+            {{/each}}
+          {{else}}
+            <div class="ui info message">
+              <div class="header">
+                Lost? Try seaching for some list:
               </div>
-          {{/each}}
+              <ul class="list">
+                <li>English names</li>
+                <li>US Census</li>
+                <li>German Surnames</li>
+                <li><i>Or add your own!</i></li>
+              </ul>
+            </div>
+          {{/if}}
       {{/ifEsInputIsEmpty}}
 
       {{#esEach index="lists"}}
