Update to Meteor 1.9

--- a/client/templates/info.html
+++ b/client/templates/info.html
@@ -4,5 +4,6 @@
     <a href="https://twitter.com/Erik_Gartner">@Erik_Gartner</a></h5>
     Version {{randyVersion}}<br>
     <a href="https://github.com/ErikGartner/randy/issues/new">Report Issue</a>
+    <a href="/account-deletion.html">Account Removal</a>
   </p>
 </template>
