--- a/client/templates/info.html
+++ b/client/templates/info.html
@@ -3,7 +3,7 @@
     <h5>Developed by
     <a href="https://twitter.com/Erik_Gartner">@Erik_Gartner</a></h5>
     Version {{randyVersion}}<br>
-    <a href="https://github.com/ErikGartner/randy/issues/new">Report Issue</a>
-    <a href="/account-deletion.html">Account Removal</a>
+    <a href="https://github.com/ErikGartner/randy/issues/new">Report Issue</a><br>
+    <a href="/account-deletion.html" target="_blank">Account Removal</a>
   </p>
 </template>
