Update privacy policy

--- a/client/templates/info.html
+++ b/client/templates/info.html
@@ -4,6 +4,6 @@
     <a href="https://twitter.com/Erik_Gartner">@Erik_Gartner</a></h5>
     Version {{randyVersion}}<br>
     <a href="https://github.com/ErikGartner/randy/issues/new">Report Issue</a><br>
-    <a href="/account-deletion.html" target="_blank">Account Removal</a>
+    <a href="/privacy-policy.html" target="_blank">Privacy Policy</a>
   </p>
 </template>
